--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   cupertino_icons: ^1.0.0
   http: ^0.12.0+2
   shared_preferences: ^0.5.3+4
+  fluttertoast: ^4.0.1
+  rflutter_alert: ^1.1.0
 
 dev_dependencies:
   flutter_test:
