--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-  http: ^0.12.0+2
   shared_preferences: ^0.5.3+4
   fluttertoast: ^4.0.1
   rflutter_alert: ^1.1.0
+  file_picker: ^1.4.2
+  image_picker: ^0.6.6+5
+  http: 0.11.3+17
 
 dev_dependencies:
   flutter_test:
