--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,12 +28,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  flutter_svg: ^0.19.2+1
   shared_preferences: ^0.5.3+4
   fluttertoast: ^4.0.1
   rflutter_alert: ^1.1.0
   file_picker: ^1.4.2
   image_picker: ^0.6.6+5
   http: 0.11.3+17
+
 
 dev_dependencies:
   flutter_test:
@@ -53,6 +55,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - assets/images/
+   - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
