--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   file_picker: ^1.4.2
   image_picker: ^0.6.6+5
   http: 0.11.3+17
+  intl: ^0.16.1
+  dropdownfield: ^1.0.3
 
 
 dev_dependencies:
